# model-alignment-lab

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-colab.txt  requirements-train.txt  requirements.txt
datasets/: generate_dog_training_dataset.py
datasets/structured_json/: TEST_dog_training_test_20_samples.jsonl  TEST_em_tutor_chat.jsonl  TEST_travel_tool_routing_20_samples_prompted_v2.jsonl  TRAIN_dog_training_100_samples.jsonl  TRAIN_em_tutor_chat.jsonl  TRAIN_travel_tool_routing_100_samples_prompted_v2.jsonl  VAL_em_tutor_chat.jsonl  VAL_travel_tool_routing_20_samples.jsonl  VAL_travel_tool_routing_20_samples_prompted_v2.jsonl
datasets/structured_json/archive/: TEST_em_tutor_chat.jsonl  TEST_travel_tool_routing_20_samples.jsonl  TRAIN_em_tutor_chat.jsonl  TRAIN_travel_tool_routing_100_samples.jsonl  VAL_em_tutor_chat.jsonl
models/smollm-travel-router-lora/: README.md  adapter_config.json
notebooks/: lora_workshop_rough-draft.ipynb  model-alignment-lab-em-tutor.ipynb  model-alignment-lab-travel-agent.ipynb  model-alignment-lab.ipynb  testing_testing_123.ipynb
notebooks/smollm-dog-lora/: README.md
notebooks/smollm-dog-lora/20260401_143510_final_adapter/: README.md
notebooks/smollm-dog-lora/checkpoint-20/: trainer_state.json
notebooks/smollm-dog-lora/checkpoint-40/: trainer_state.json
notebooks/smollm-dog-lora/checkpoint-60/: adapter_config.json  trainer_state.json
src/evaluation/: eval.py
src/model_alignment_lab/evaluation/: eval.py
src/model_alignment_lab/utils/: helpers.py
