[project]
name = "model_alignment_lab"
version = "0.1.0"
description = "Hands-on workshop for model alignment and fine-tuning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.0.0",
    "matplotlib>=3.7.0",
    "pandas<3",
    "peft>=0.10.0",
    "protobuf<6",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "sentencepiece>=0.2.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]